fix spacing for graphs

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -260,7 +260,6 @@
 }
 
 .source {
-  margin-top: 4px;
   margin-bottom: 4px;
 }
 
